Corrected a small display bug uncovered during today's presentation - missing comma+space between two tf elements.

--- a/dicts/scripts/gt_dictionary.css
+++ b/dicts/scripts/gt_dictionary.css
@@ -44,7 +44,7 @@ e > lg + mg:only-of-type {
 }
 
 /* tg + t styling: */
-tg + tg, t + t, tf + t, t + tf {
+tg + tg, t + t, tf + t, t + tf, tf + tf {
     margin-left: -.3em;
 }
 t:after {
